tests/snapshots/examples_fixtures/guide__stdlib_process_pipelines.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 39
---
Fixture: examples/guide/stdlib_process_pipelines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
