tests/snapshots/examples_fixtures/guide__string_interpolation.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/string_interpolation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
