tests/snapshots/examples_fixtures/guide__strings.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
