tests/snapshots/examples_fixtures/guide__tuple_pipelines.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/tuple_pipelines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
