tests/snapshots/examples_fixtures/guide__tuples.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/tuples.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
