tests/snapshots/examples_fixtures/guide__type_builtins.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/type_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
