tests/snapshots/examples_fixtures/guide__using_constants.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/using_constants.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
