tests/snapshots/examples_fixtures/guide__using_list_module.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/using_list_module.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
