tests/snapshots/examples_fixtures/guide__using_modules.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/using_modules.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
