tests/snapshots/examples_fixtures/guide__variables.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/variables.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
